# STM32-AFSK-Modem

./: .clang-format  .gitignore  .gitmodules  README.md
.github/workflows/: build.yml
common/: external_coms.jsonc  generate_external_comms.py
common/generator/components/: base_component.py  enum.py
common/generator/output/: __init__.py  base_file.py  file_header.py  output_buffer.py
common/generator/output/cpp/: file.py  gen_enum.py
common/generator/output/python/: file.py  gen_enum.py
docs/: audio.ipynb  dac_dma.md  external_comms.md  hardware_configuration.md  meeting_summary.md  minimodemtest.md  modem_state_machine.puml  name_ideas.md  stm32_1200hz_timer.py  stm32_audio_frequency_calc.py  stm32_timer_calculator.py  toolchain.md
docs/sources/: stm32_clock.py
external_host/: checksum.py  comms.py  config.json  external_comms_types.py  log.conf  main.py  packet.py  packet_ids.py
latex/: audio_waveform_generation.tex  main.tex  proposal.tex  refs.bib  refs.bib.old
project/: .cproject  .mxproject  .project  CMakeLists.txt  afsk_link Debug.launch  afsk_link.ioc
project/Core/Inc/: main.h  stm32f4xx_hal_conf.h
project/Core/Src/: main.c
project/Debug/: afsk_link.list  afsk_link.map  makefile
project/Debug/Core/Src/: main.d  main.su  stm32f4xx_hal_msp.d  stm32f4xx_hal_msp.su  stm32f4xx_it.d  subdir.mk  system_stm32f4xx.d
project/Debug/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal.d  stm32f4xx_hal_adc.d  stm32f4xx_hal_adc_ex.d  stm32f4xx_hal_cortex.d  stm32f4xx_hal_dac.d  stm32f4xx_hal_dac_ex.d  stm32f4xx_hal_dma.d  stm32f4xx_hal_dma_ex.d  stm32f4xx_hal_exti.d  stm32f4xx_hal_flash.d  stm32f4xx_hal_flash_ex.d  stm32f4xx_hal_flash_ramfunc.d  stm32f4xx_hal_gpio.d  stm32f4xx_hal_pwr.d  stm32f4xx_hal_pwr_ex.d  stm32f4xx_hal_rcc.d  stm32f4xx_hal_rcc_ex.d  stm32f4xx_hal_tim.d  stm32f4xx_hal_tim_ex.d  stm32f4xx_hal_uart.d  subdir.mk
project/Drivers/: CMakeLists.txt
project/lib/FreeRTOS/: CMakeLists.txt
project/src/: main.cpp  stm32f4xx_hal_msp.c
project/src/external_comms/: external_comms.cpp  external_comms.hpp  message_ids.hpp
stm32_afsk/: CMakeLists.txt  CMakePresets.json  flash.sh
stm32_afsk/src/: assert_handler.h  main.cpp  stm32f4xx_hal_conf.h  stm32f4xx_hal_msp.c  stm32f4xx_it.c  stm32f4xx_it.h  waveform_generation.py
stm32_afsk/src/external_comms/: external_comms.cpp  external_comms.hpp  external_comms_config.hpp  external_comms_types.hpp  message_ids.hpp  packet_ids.hpp
stm32_afsk/src/hardware/: hardware_init.cpp  hardware_init.hpp  init_dac.cpp  init_gpio.cpp  init_timers.cpp  macros.h
stm32_afsk/src/modem/: modem.cpp  modem.hpp  waveform.hpp  waveform_generation.py
stm32_afsk/src/wavedriver/: wave_driver.hpp  waveform.hpp  waveform_generation.py
stm32_cubeIDE_workspace/afsk_link.elf/: .cproject  .project
stm32_cubeIDE_workspace/stm32_ioc_test/: .cproject  .mxproject  .project  stm32_ioc_test.ioc
stm32_cubeIDE_workspace/stm32_ioc_test/Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
stm32_cubeIDE_workspace/stm32_ioc_test/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
stm32_cubeIDE_workspace/wavegen/: .cproject  .mxproject  .project  wavegen.ioc
stm32_cubeIDE_workspace/wavegen/Core/Inc/: stm32f4xx_hal_conf.h
stm32_cubeIDE_workspace/wavegen/Core/Src/: adc.c  dac.c  dma.c  gpio.c  main.c  stm32f4xx_it.c  tim.c  usart.c
stm32_cubeIDE_workspace/wavegen/Debug/: makefile  objects.list  wavegen.map
stm32_cubeIDE_workspace/wavegen/Debug/Core/Src/: dac.d  dma.d  gpio.d  main.cyclo  main.d  main.su  stm32f4xx_hal_msp.d  stm32f4xx_it.d  subdir.mk  system_stm32f4xx.d  tim.d
stm32_cubeIDE_workspace/wavegen/Debug/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal.d  stm32f4xx_hal_cortex.d  stm32f4xx_hal_dac.d  stm32f4xx_hal_dac_ex.d  stm32f4xx_hal_dma.d  stm32f4xx_hal_dma_ex.d  stm32f4xx_hal_exti.d  stm32f4xx_hal_flash.d  stm32f4xx_hal_flash_ex.d  stm32f4xx_hal_flash_ramfunc.d  stm32f4xx_hal_gpio.d  stm32f4xx_hal_pwr.d  stm32f4xx_hal_pwr_ex.d  stm32f4xx_hal_rcc.d  stm32f4xx_hal_rcc_ex.d  stm32f4xx_hal_tim.d  stm32f4xx_hal_tim_ex.d  subdir.mk
tests/: external_comms_test.py
topic_proposal/: proposal.tex  refs.bib
